      looking transparent sprites, but slower [Ralph]
    * Attacks can have custom alignment relative to their targets

   * New Plotscripting Features
    * "set timer args" [Ralph]
    * "sl:walkabout sprite" alias to "sl:walkabout sprite component" and
      "sl:walkabout shadow" alias to "sl:walkabout shadow component"
    * "get scancode name" works for joy: scancodes too [Ralph]

  *** Changes

  *** Bugfixes
    * "set opacity" (with opacity < 100%) didn't always turn on blending
      [Ralph]
    * Bug #1118 In turn-based battles, non-blocking attacks delayed by X
      attacks could delay by up to X turns. You have to turn off the "Non-turn
      attack delays can also cause turn delays" back-compatibility bit to get
      this bugfix [Ralph]
    * Experience required to level is no longer shown in the Status screen
      for heroes that reached max level. If all heroes are at max level,
      battles no longer tell that you gained experience [Ralph]
    * Damage and level caps changes didn't update in saved games. This fix
      only affects new saves, old ones still remember the old caps [Ralph]
    * Wrong victory animation when battle ends while hero is walking [Ralph]
    * In the slice editor, Ctrl+Up/Down and Shift+Up/Down made the cursor move
      two places [Ralph]
    * Sprites imported from PNGs had the last palette color set to black [Ralph]
    * Wrong default palette in spriteset browser after importing a frame [Ralph]
    * "load palette" reverted often when using Test Game or debug menus [Ralph]
    * Deleting tilesets didn't delete default passability or animations, and
      the tilesets reappeared, blanked out, when quitting & reloading [Ralph]
    * Foemap Stats menu partly ignored enemy 0, and several minor bugs [Ralph]
    * Saving in a hidden save slot with a script will not move the default
      cursor to the very bottom of the save/load menu anymore [James]